aks-deployment/essedum-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: essedum-ingress
  namespace: aipns
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: lfn.essedum.anuket.iol.unh.edu
    http:
      paths:
      - backend:
          service:
            name: essedum-ui-service
            port:
              number: 8084
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - lfn.essedum.anuket.iol.unh.edu
    secretName: essedum-secret
status:
  loadBalancer:
    ingress:
    - ip: 10.200.111.202
